# BMS-GUI

./: .gitignore  Arch-Linux README.md  CMakeLists.txt  README.md  jj.md  new_doc.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
bindings/python/: README.md
core/: README.md
core/include/bms/: status.h
core/include/storage/: snapshot.h
core/src/observability/: bms_logger.c  bms_metrics.c
core/src/storage/: bms_data_dir.c  bms_jsonl_store.c  (+3 more)
data.example/: README.md
docs/: ACCOUNTING_RULES.md  ACCOUNTING_SPEC.md  ARCHITECTURE.md  BACKUP_RECOVERY.md  BUSINESS_STRATEGY.md  DOMAIN_CONTRACTS.md  ENGINEERING_DESIGN.md  EVENT_CATALOG.md  EVENT_SCHEMAS.md  FILE_STORAGE_SPEC.md  FIRST_TEST_PLAN.md  HLD_LLD_COMPLETE_ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  INVARIANTS.md  MODULE_MAP.md  MVP_SCOPE.md  OPERATIONS.md  PLATFORM_SPEC.md  PLUGIN_ABI.md  README.md  RELEASE_CANDIDATE.md  RELEASE_GATE.md  SECURITY_GUIDE.md  TESTING.md  VISION.MD  VISION.md  archetech_design.md  industry_grade_business_platform_master_blueprint.md
docs/ADR/: 0001-modular-monolith-first.md  0002-file-based-storage-for-mvp.md
restore-preview/: backup_manifest.json
restore-preview/accounting/: journal_entries.jsonl  journal_lines.jsonl  periods.jsonl
restore-preview/audit/: audit_records.jsonl
restore-preview/billing/: invoice_lines.jsonl  invoices.jsonl
restore-preview/events/: business_events.jsonl
restore-preview/inventory/: items.jsonl  stock_movements.jsonl
restore-preview/users/: users.json
restore-preview/wal/: current.wal.jsonl
scripts/: verify  verify.ps1
src/bms/: __init__.py  __main__.py  core.py
tests/core/: test_bms_core_observability.c  test_bms_core_storage.c
tests/integration/: test_mvp_integrity_gate.py
tests/unit/: test_accounting_service.py  test_application_command_facade.py  test_application_recovery.py  test_application_runtime.py  test_architecture_ports.py  test_backup_service.py  test_billing_service.py  test_command_schemas.py  test_core_file_store.py  test_demo_data.py  test_event_schemas.py  test_inventory_service.py  test_reconciliation_service.py  test_recovery_cli.py  test_release_check.py  test_reporting_service.py  test_startup_health_service.py  test_ui_main.py
(+71 files in other folders)
